--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <!-- Portofolio 4 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\gambar tetris.png" alt="Games Tetris" class="portofolio-image img-fluid">
+          <img src="/images/gambar kalkulator.png" alt="Games Tetris" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Games Tetris</h5>
             <a href="https://tetris-riski-indol.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
