--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <!-- Portofolio 1 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\gambar form login.png" alt="Form Login" class="portofolio-image img-fluid">
+          <img src= "images/gambar form login.png" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Form Login</h5>
             <a href="https://login-yoga.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
@@ -116,7 +116,7 @@
       <!-- Portofolio 2 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\gambar web portofolio.png" alt="Web Portofolio" class="portofolio-image img-fluid">
+          <img src="images/gambar web portofolio.png"portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Web Portofolio</h5>
             <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
@@ -127,7 +127,7 @@
       <!-- Portofolio 3 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\gambar kalkulator (2).png" alt="Kalkulator" class="portofolio-image img-fluid">
+          <img src="images/gambar kalkulator.png" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Kalkulator</h5>
             <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
@@ -138,7 +138,7 @@
       <!-- Portofolio 4 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="/images/gambar kalkulator.png" alt="Games Tetris" class="portofolio-image img-fluid">
+          <img src="/images/gambar tetris.png" alt="Games Tetris" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Games Tetris</h5>
             <a href="https://tetris-riski-indol.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
@@ -149,7 +149,7 @@
       <!-- Portofolio 5 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\Screenshot 2024-12-18 223618.png" alt="Chart Dashboard" class="portofolio-image img-fluid">
+          <img src="images/gambar dasboard.png" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Chart Dashboard Penjualan Tahunan</h5>
             <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
@@ -174,7 +174,7 @@
     spaceBetween: 30,
    
     },
-  });
+);
 </script>
 </body>
 </html>
@@ -188,7 +188,7 @@
       <!-- Portofolio 1 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\phyton.jpg" alt="Mobile App UI Design" class="portofolio-image">
+          <img src="images/phyton.jpg"="portofolio-image">
           <div class="portofolio-details">
             </p>
           </div>
@@ -198,7 +198,7 @@
       <!-- Portofolio 2 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\javascript.webp" alt="Mobile App UI Design" class="portofolio-image">
+          <img src="images/javascript.webp" class="portofolio-image">
           <div class="portofolio-details">
             </p>
           </div>
@@ -209,7 +209,7 @@
       <!-- Portofolio 3 -->
       <div class="col-md-4">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\OneDrive\Gambar\HTML.png" alt="Mobile App UI Design" class="portofolio-image">
+          <img src="images/HTML.png"portofolio-image">
           <div class="portofolio-details">
             </p>
           </div>
