--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <img src="images/gambar web portofolio.png"portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Web Portofolio</h5>
-            <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
+            <a href="https://portofolio-riskiyoga.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
           <img src="images/gambar kalkulator.png" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Kalkulator</h5>
-            <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
+            <a href="https://kalkulator-riski.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
           </div>
         </div>
       </div>
@@ -152,7 +152,7 @@
           <img src="images/gambar dasboard.png" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Chart Dashboard Penjualan Tahunan</h5>
-            <a href="#" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
+            <a href="https://riski-dasboard.vercel.app/" class="portofolio-link btn btn-primary btn-sm mt-2">View Details</a>
           </div>
         </div>
       </div>
@@ -226,10 +226,10 @@
       <!-- Certificate 1 -->
       <div class="col-md-5">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\Downloads\d2936259-74c3-48d5-8150-8d454d5a6530.jpg" alt="Certificate HTML" class="portofolio-image img-fluid">
+          <img src="images/sertifikat html.jpg" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Certificate HTML</h5>
-            <a href="#" class="portofolio-link btn btn-primary btn-sm">View Details</a>
+            <a href="https://www.sololearn.com/certificates/CC-DHY58MFI" class="portofolio-link btn btn-primary btn-sm">View Details</a>
           </div>
         </div>
       </div>
@@ -237,10 +237,10 @@
       <!-- Certificate 2 -->
       <div class="col-md-5">
         <div class="portofolio-card">
-          <img src="C:\Users\devi kurniasari\Downloads\b7611359-c860-4619-83fb-e60a8350c14b_page-0001.jpg" alt="Certificate CSS" class="portofolio-image img-fluid">
+          <img src="images/sertifikat css.jpg" class="portofolio-image img-fluid">
           <div class="portofolio-details text-center">
             <h5 class="portofolio-title">Certificate CSS</h5>
-            <a href="#" class="portofolio-link btn btn-primary btn-sm">View Details</a>
+            <a href="https://www.sololearn.com/certificates/CC-OQJR4JEI" class="portofolio-link btn btn-primary btn-sm">View Details</a>
           </div>
         </div>
       </div>
@@ -248,7 +248,7 @@
 <!-- Certificate 3 --> 
 <div class="col-md-5"> 
   <div class="portofolio-card"> 
-    <img src="C:\Users\devi kurniasari\Downloads\Introduction-to-JavaScript_page-0001.jpg" alt="Certificate Intermediate Js" class="portofolio-image img-fluid"> 
+    <img src="images/JavaScript-Intermediate _page-0001 (1).jpg" class="portofolio-image img-fluid"> 
     <div class="portofolio-details text-center"> 
       <h5 class="portofolio-title">Certificate Intermediate Js</h5> 
       <a href="#" class="portofolio-link btn btn-primary btn-sm">View Details</a> 
@@ -258,7 +258,7 @@
   <!-- Certificate 4 --> 
    <div class="col-md-5"> 
     <div class="portofolio-card"> 
-      <img src="C:\Users\devi kurniasari\Downloads\Introduction-to-JavaScript_page-0001 (1).jpg" alt="Certificate Advanced Js" class="portofolio-image img-fluid"> 
+      <img src="images/Introduction-to-JavaScript_page-0001 (1).jpg" class="portofolio-image img-fluid"> 
       <div class="portofolio-details text-center"> 
         <h5 class="portofolio-title">Certificate Introduction Js</h5> 
         <a href="#" class="portofolio-link btn btn-primary btn-sm">View Details</a> 
